# rtk_crm

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py  schemas.py  services.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: AUTH.md  REPO_MAP.md  UI.md  arquitectura.md  chatbot-n8n-openai.md  como-probar.md  modelo-datos.md  roadmap.md
nginx/: vps.conf
scripts/: smoke-chatbot-n8n.sh  smoke-cobranza-n8n.sh
tests/: test_api.py
web/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json
web/src/: App.jsx  api.js  main.jsx  styles.css
