[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtk-crm"
version = "0.1.0"
description = "CRM multi-compañía estilo Chatwoot + WispHub con UISP, n8n y OpenAI"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "jinja2>=3.1.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "cryptography>=42.0.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
